[package]
name = "sangaku_shaker"
version = "0.1.0"
authors = ["Arnau Siches <asiches@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
r2d2 = "0.8"
r2d2_sqlite = "0.17"
rusqlite = { version = "0.24", features = ["bundled", "functions", "limits", "load_extension"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
clap = "3.0.0-beta.2"
